Update VITE_API_URL for production environment

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # IMPORTANT: Replace this with your actual deployed backend URL after deploying to Render
-VITE_API_URL=https://your-backend-app.onrender.com
+VITE_API_URL=https://crisis-p2iu.onrender.com
